--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order Summary Component</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <main>
+        <div class="card">
+            <img class="illustration" src="./images/illustration-hero.svg" alt="Cartoon of a person dancing to music">
+            <h1>Order Summary</h1>
+            <p class="description">You can now listen to millions of songs,<br>audiobooks, and podcasts on any device<br>anywhere you like!</p>
+            <div class="planContainer">
+                <img class="music" src="./images/icon-music.svg" alt="Music Icon">
+                <div class="planBox">
+                    <h2>Annual Plan</h2>
+                    <p class="cost">$59.99/year</p>
+                </div>
+                <a class="changeLink" href="#">Change</a>
+            </div>
+            <a href="#" class="paymentButton">Proceed to Payment</a>
+            <a href="#" class="cancelLink">Cancel Order</a>
+        </div>
+    </main>
 </body>
+
 </html>
