--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="card">
             <img class="illustration" src="./images/illustration-hero.svg" alt="Cartoon of a person dancing to music">
             <h1>Order Summary</h1>
-            <p class="description">You can now listen to millions of songs,<br>audiobooks, and podcasts on any device<br>anywhere you like!</p>
+            <p class="description">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
             <div class="planContainer">
                 <img class="music" src="./images/icon-music.svg" alt="Music Icon">
                 <div class="planBox">
